# PR_review-Agent

./: .env.template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HOW_TO_RUN.md  LICENSE  OPTIONAL_TOOLS.md  PUSH_SUMMARY.md  README.md  SECURITY.md  SECURITY_FIX_SUMMARY.md  VERIFICATION_GUIDE.md  VERIFICATION_SUMMARY.md  cli_demo.py  demo.py  pyproject.toml  requirements.txt  setup.py  standalone_cli.py  test_basic.py  test_lightweight.py
.github/workflows/: ci.yml
config/: pr_review_config.yaml
pr_review_agent/: __init__.py  cli.py
pr_review_agent/adapters/: __init__.py  base.py  bitbucket.py  github.py  gitlab.py
pr_review_agent/analyzers/: __init__.py  base.py  manager.py
pr_review_agent/core/: __init__.py  ai_feedback.py  config.py  reviewer.py  scorer.py
scripts/: setup.py  validate_structure.py  verify_functionality.py
tests/: conftest.py  run_tests.py  test_integration.py
tests/unit/: test_adapters.py  test_analyzers.py  test_cli.py  test_config.py  test_reviewer.py  test_scorer.py
